--- a/mobywatel-main/index.html
+++ b/mobywatel-main/index.html
@@ -34,7 +34,7 @@
                 <div id="nimated-flag"></div>
                 <div id="holo">
                 <div id="emblem"></div>
-                <p id="rzeczpos">Reczpospolita<br>Polska</p>
+                <p id="rzeczpos">Rzeczpospolita<br>Polska</p>
                 </div>
             </div>
             
@@ -95,7 +95,7 @@
                 <hr>
 
                 <p class="pDodatkowe">Nazwsiko rodowe ojca</p>
-                <h3 class="h3dodatkowe">Morgieł</h3>
+                <h3 class="h3dodatkowe">Grabowski</h3>
                 <hr>
 
                 <p class="pDodatkowe">Nazwisko rodowe matki</p>
@@ -143,7 +143,7 @@
 <div id="potwierdzDane">
     <h3>Potwierdź swoje dane</h3>
     <img src="zdjecia/wifi.png" id="wifi">
-    <p>Brak połącznie z internetem</p>
+    <p>Brak połączenia z internetem</p>
     <button id="zamknijPotw" onclick="zamknijPotw()">Zamknij</button>
 </div>
 
