--- a/mobywatel-main/index.html
+++ b/mobywatel-main/index.html
@@ -44,7 +44,7 @@
                     <p class="label">Imię (Imiona)</p>
                 </div>
                 <div class="dany">
-                    <h2>Morgieł</h2>
+                    <h2>Grabowski</h2>
                     <p class="label">Nazwisko</p>
                 </div>
                 <div class="dany">
