--- a/mobywatel-main/index.html
+++ b/mobywatel-main/index.html
@@ -103,7 +103,7 @@
                 <hr>
 
                 <p class="pDodatkowe">Organ wydający</p>
-                <h3 class="h3dodatkowe">Prezydent miasta Gdańsk</h3>
+                <h3 class="h3dodatkowe">Urząd miasta i gminy Nowa Dęba</h3>
                 <hr>
 
                 <p class="pDodatkowe">Data wydania</p>
